fdo#84315 quick fix

In mergedlib case, load ourselves (that is, mergedlib).
Fixes bug symptoms, while waiting for fully clean solution,
which is killing svx/dbtoolsclient completely.

Change-Id: Ib8ad34ee4697f89bdc6bbe64d406053f9e7f7521